# Phoenix-AI-X

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  ROADMAP.md  SECURITY.md  docker-compose.yml  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  test_predictor.py
.github/workflows/: ci.yml  release.yml  tests.yml
.streamlit/: config.toml
app/ai/: agent_manager.py  context.py  events.py  kernel.py  knowledge_base.py  memory.py  orchestrator.py  predictor.py  prepare_dataset.py  test_predictor.py  train_model.py  train_v2.py
app/analytics/: __init__.py  analytics.py
app/backtest/: backtest_engine.py  metrics.py  portfolio.py
app/cognition/: __init__.py  attention.py  brain.py  critic.py  decision_engine.py  goal_manager.py  planner.py  reasoner.py  reflection.py  scheduler.py  task_manager.py  working_memory.py
app/config/: __init__.py  config.py
app/dashboard/: dashboard.py
app/data/: download_data.py  feature_engineering.py  realtime_features.py
app/database/: __init__.py  database.py  repository.py
app/development/: __init__.py  auto_retraining_scheduler.py  development_agent.py  evaluation_pipeline.py  model_registry.py  (+2 more)
data/: AI_Dataset.csv  AI_Features.csv  BTC_USDT_1h.csv  BTC_USDT_Indicators.csv  BTC_USDT_Strategy.csv
models/: xgboost_model.pkl  xgboost_v2.pkl
notebooks/: 01_setup.ipynb  02_data_collection.ipynb  03_feature_engineering.ipynb  04_model_training.ipynb  05_backtesting.ipynb  06_strategy_generation.ipynb  07_reinforcement_learning.ipynb  08_experiments.ipynb  09_visualization.ipynb
scripts/: README.md
tests/: test_ai_platform.py  test_ai_strategy.py  test_analytics.py  test_cognition.py  test_database.py  test_development_agent.py  test_factory.py  test_live_paper_trader.py  test_live_runner.py  test_loader.py  test_manager.py  test_market_data.py  test_paper_trader.py  test_realtime_features.py  test_registry.py  test_repository.py  test_research_lab.py  test_risk_manager.py  test_strategy_engine.py  test_workflow_automation.py
(+101 files in other folders)
