[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "phoenix-ai-x"
version = "0.1.0"
description = "Autonomous AI quantitative research platform foundation"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Phoenix AI X Contributors" }]
dependencies = ["fastapi>=0.115,<1.0", "pydantic>=2.9,<3.0", "pydantic-settings>=2.5,<3.0"]

[project.optional-dependencies]
research = ["numpy>=1.26", "pandas>=2.2", "scikit-learn>=1.5", "optuna>=4.0", "mlflow>=2.17"]
ml = ["torch>=2.4", "tensorflow>=2.17", "xgboost>=2.1", "lightgbm>=4.5", "catboost>=1.2"]
distributed = ["ray[default]>=2.37", "dask[distributed]>=2024.9"]
dev = ["pytest>=8.3", "pytest-cov>=5.0", "black>=24.10", "ruff>=0.7", "mypy>=1.13", "pre-commit>=4.0"]

[project.scripts]
phoenix = "phoenix_ai.cli.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.lint.isort]
known-first-party = ["phoenix_ai"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = true
mypy_path = "src"
exclude = ["^app/", "^tests/test_"]

[[tool.mypy.overrides]]
module = ["ray.*", "dask.*", "mlflow.*", "tensorflow.*", "lightgbm.*", "catboost.*", "xgboost.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests/unit", "tests/integration", "tests/performance", "tests/regression"]
addopts = "-ra --strict-markers --cov=phoenix_ai --cov-report=term-missing --cov-report=xml"
markers = [
  "integration: tests requiring infrastructure services",
  "performance: performance or benchmark tests",
  "regression: regression coverage",
]

[tool.coverage.run]
branch = true
source = ["phoenix_ai"]

[tool.coverage.report]
fail_under = 0
show_missing = true
